<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_360"
        android:gravity="center"
        android:text="@string/txt_sinpals_name"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/txt_size_42" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_60"
        android:layout_marginRight="@dimen/px_60"
        android:layout_marginTop="@dimen/px_80"
        android:hint="@string/txt_phone_number"
        android:textSize="@dimen/txt_size_42" />

    <EditText
        android:id="@+id/et_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_60"
        android:layout_marginRight="@dimen/px_60"
        android:layout_marginTop="@dimen/px_80"
        android:hint="@string/txt_password"
        android:textSize="@dimen/txt_size_42" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_60"
        android:layout_marginRight="@dimen/px_60"
        android:layout_marginTop="@dimen/px_80"
        android:enabled="false"
        android:text="@string/txt_login"
        android:textSize="@dimen/txt_size_42" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_forget_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_forget_psw"
            android:paddingLeft="@dimen/px_60"
            android:layout_alignParentLeft="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_size_42" />

        <TextView
            android:id="@+id/tv_understand_sinpals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_understand_sinpals"
            android:paddingRight="@dimen/px_60"
            android:layout_alignParentRight="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt_size_42" />
    </RelativeLayout>

</LinearLayout>