<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_150"
        android:background="@android:color/holo_blue_bright"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <View
                android:id="@+id/v_filter"
                android:layout_width="@dimen/px_100"
                android:layout_height="@dimen/px_100"
                android:background="@android:color/holo_blue_dark" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px_20"
                android:layout_marginRight="@dimen/px_20"
                android:layout_weight="8"
                android:textSize="@dimen/txt_size_42" />

            <View
                android:id="@+id/v_search"
                android:layout_width="@dimen/px_100"
                android:layout_height="@dimen/px_100"
                android:background="@android:color/holo_blue_dark" />
        </LinearLayout>

        <View
            android:id="@+id/v_all_data"
            android:layout_width="@dimen/px_100"
            android:layout_height="@dimen/px_100"
            android:background="@android:color/holo_blue_dark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_120"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_map" />

        <TextView
            android:id="@+id/tv_title_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_business" />

        <TextView
            android:id="@+id/tv_title_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt_new_data" />

    </LinearLayout>


</LinearLayout>